<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:id="@+id/distance_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="14sp"
        android:text="@string/distance"/>

    <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
           android:id="@+id/camera_image_view"
           android:background="@drawable/border"
           android:layout_gravity="center"
           android:layout_marginTop="5dp"
           android:layout_width="300dp"
           android:layout_height="225dp"
           android:contentDescription="@string/desc"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginStart="5dp"
        android:layout_gravity="start"
        android:textStyle="bold"
        android:textSize="14sp"
        android:text="@string/log"/>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_width="fill_parent"
        android:layout_height="190dp"
        android:scrollbars="vertical"
        android:fillViewport="true">
        <TextView
            android:id="@+id/log_text"
            android:background="@drawable/border"
            android:textSize="8sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
    </ScrollView>

    <Button
        android:id="@+id/clear_logs_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:minHeight="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_gravity="end"
        android:text="@string/clear"/>
</LinearLayout>
