<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_gravity="start"
            android:textStyle="bold"
            android:textSize="14sp"
            android:text="@string/log"/>

        <ScrollView
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_width="fill_parent"
            android:layout_height="250dp"
            android:scrollbars="vertical"
            android:fillViewport="true">
            <TextView
                android:background="@drawable/border"
                android:id="@+id/log_text"
                android:textSize="8sp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
         </ScrollView>

        <Button
            android:id="@+id/clear_logs_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:minHeight="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="end"
            android:text="@string/clear"/>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center"
                      android:layout_marginStart="5dp"
                      android:layout_marginEnd="5dp"
                      android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/command"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text|textCapSentences"
                    android:hint="@string/enter_command"/>
            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/send_command"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/send"/>
        </LinearLayout>

        <TextView
            android:textSize="14sp"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/quick_command"/>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="5dp"
                      android:layout_marginStart="5dp"
                      android:layout_marginEnd="5dp"
                      android:layout_gravity="center"
                      android:orientation="horizontal">
            <Spinner
                android:id="@+id/quick_command_list"
                android:layout_gravity="start"
                android:layout_width="200dp"

                android:layout_marginStart="30dp"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/send_quick_command"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="30dp"
                android:text="@string/send"/>
        </LinearLayout>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
